# hexagon-city

./: meson.build
data/: index
data/layouts/: player.asset  player.layout.xml  selection.asset  selection.layout.xml  simulation.asset  simulation.layout.xml
data/models/: building.asset
data/shaders/: default-forward-rendering.vert.asset
data/textures/: building.asset
src/: BuildingCreateRequestedEvent.hpp  BuildingCreatedEvent.hpp  BuildingDestroyRequestedEvent.hpp  BuildingDestroyedEvent.hpp  BuildingType.hpp  BuildingUpgradeRequestedEvent.hpp  BuildingUpgradedEvent.hpp  BulidingComponent.hpp  CellType.hpp  CitySimulationSystem.cpp  CitySimulationSystem.hpp  DebugCameraSystem.cpp  DebugCameraSystem.hpp  DebugCityGenerationSystem.cpp  DebugCityGenerationSystem.hpp  GameUISystem.cpp  GameUISystem.hpp  GridBuildingComponent.hpp  GridBuildingsSystem.cpp  GridBuildingsSystem.hpp  GridCellComponent.hpp  GridConstants.hpp  GridDrawableProvider.cpp  GridDrawableProvider.hpp  GridGenerationSystem.cpp  GridGenerationSystem.hpp  GridPositionComponent.hpp  HexCoordinates.hpp  HoveredComponent.hpp  InGameEvents.hpp  Main.cpp  PlayerStateContext.hpp  RandomGenerator.cpp  RandomGenerator.hpp  RayCollisionVolumeComponent.hpp  Raycaster.cpp  Raycaster.hpp  SelectedComponent.hpp  SelectionChangedEvent.hpp  SelectionSystem.cpp  (+1 more)
src/Components/: GridBuildingComponent.hpp  GridCellComponent.hpp  GridPositionComponent.hpp  HoveredComponent.hpp  RayCollisionVolumeComponent.hpp  SelectedComponent.hpp
src/Rendering/: GridDrawableProvider.cpp  GridDrawableProvider.hpp
(+12 files in other folders)
